--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-yaei7z58wnqo730g.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=qqRFhjLXt6QSQxwM7hCZy9uPMorWPWlm
+REACT_APP_API_ENDPOINT=https://u1kkubh111.execute-api.us-east-1.amazonaws.com/dev
